chore: setup github actions worflow for flutter

--- a/.github/test-and-build.yaml
+++ b/.github/test-and-build.yaml
@@ -5,11 +5,11 @@ name: Test & Build
 on:
   pull_request:
     branches:
-      - main
+      - master
       - dev
   push:
     branches:
-      - main
+      - master
       - dev
 
 # 3.
